--- a/ucp-frontend/package.json
+++ b/ucp-frontend/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^14.1.1"
   }
 }
