--- a/ucp-frontend/package.json
+++ b/ucp-frontend/package.json
@@ -1,12 +1,15 @@
 {
   "name": "ucp-frontend",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "author": "Radics Ádám",
+  "license": "ISC",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "pinia": "^2.1.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
