Discord nézet készen van, a discord meghívó  megnyitható az oldalról.

--- a/ucp-backend/.env
+++ b/ucp-backend/.env
@@ -1,6 +1,6 @@
-DBHOST = 'localhost'
-DBUSER = 'root'
-DBPASS = ''
-DBNAME = 'web_lsrp'
+DBHOST = '192.168.1.103'
+DBUSER = 'dbAdmin'
+DBPASS = 'I!_MUPP/7XN*@hxa'
+DBNAME = 'lsrp'
 
 SERVER_PORT = 3000
