Bejelentkezés tokenezve készen van, megkapja a frontend a tokent illetve a felhasználó adatait.

--- a/ucp-backend/.env
+++ b/ucp-backend/.env
@@ -2,5 +2,6 @@ DBHOST = 'localhost'
 DBUSER = 'dbAdmin'
 DBPASS = 'I!_MUPP/7XN*@hxa'
 DBNAME = 'lsrp'
+JWT_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9'
 
 SERVER_PORT = 3000
