--- a/ucp-frontend/package.json
+++ b/ucp-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "primeicons": "^7.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
