Elfelejtett felhasználó lehetőség készen van.

--- a/ucp-backend/.env
+++ b/ucp-backend/.env
@@ -2,6 +2,10 @@ DBHOST = 'localhost'
 DBUSER = 'dbAdmin'
 DBPASS = 'I!_MUPP/7XN*@hxa'
 DBNAME = 'lsrp'
-JWT_KEY = 'QjXUp.HE.yB\=.ls-9M46D'
+
+SMTP_HOST = smtp.gmail.com
+SMTP_PORT = 465
+SMTP_PASS = landhuwhaltqmprb
+SMTP_USER = radicsadam0024@gmail.com
 
 SERVER_PORT = 3000
